Adicionei o arquivo para busca das músicas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jar=${dist.dir}/Player.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jaudiotagger-2.2.6-SNAPSHOT.jar=lib\\jaudiotagger-2.2.6-SNAPSHOT.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.jaudiotagger-2.2.6-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
